Added Camera support

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,9 @@
         android:id="@+id/label_longitude"
         android:text="@string/longitude"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cameraImage"/>
+
 </LinearLayout>
