--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/label_motion"
-        android:text="@string/motion"/>
+        android:id="@+id/label_status"
+        android:text="@string/status"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
